# ssid_tracer

./: .gitignore  README.md  _pane_bootstrap.cmd  ai_cowork.rules  coding.rules  commit.rules  ensure_repo_pushed_by_ai_agent_commit_message.bat  ensure_repo_pushed_by_ai_agent_commit_message.py  ensure_wifi_expected_ssids_watched.py  launch_panes.py  map_tab_ids_and_ai_agents.toml  pyproject.toml  run.cmd  ssid_analyzer.py  ssid_config.py  ssid_logger.py  ssid_renderer.py  ssid_renderer_base.py  ssid_renderer_detected.py  ssid_renderer_result.py  ssid_scanner.py  ssid_utils.py  개발.windows_terminal_실행_as_lateral_panes.cmd  개발.windows_terminal_실행_as_lateral_panes.py
ai_cowork/: roles.rules
ai_cowork/debugger/: handover_template.md
ai_cowork/planner/: handover_template.md
ai_cowork/tester/: handover.md  handover_template.md
ai_cowork/upserter/: handover.md  handover_template.md
ai_cowork/wbs_planner/: handover.md
tests/: test_ssid_sections.py  test_wifi_ssid_tracer.py  test_windows_terminal_launcher.py
